--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>actor.proto</groupId>
     <artifactId>proto-parent</artifactId>
-    <version>0.8-SNAPSHOT</version>
+    <version>1</version>
     <packaging>jar</packaging>
     <url>http://proto.actor</url>
     <licenses>
@@ -23,6 +23,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.version>1.1.3-2</kotlin.version>
         <junit.version>4.12</junit.version>
+        <package.version>0.8-SNAPSHOT</package.version>
     </properties>
 
     <dependencies>
