--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.1.3-2</kotlin.version>
+        <kotlin.version>1.2-M1</kotlin.version>
         <junit.version>4.12</junit.version>
         <package.version>0.8-SNAPSHOT</package.version>
     </properties>
