--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
         <package.version>0.8-SNAPSHOT</package.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>kotlineap</id>
+            <url>http://dl.bintray.com/kotlin/kotlin-eap-1.2</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
