--- a/pom.xml
+++ b/pom.xml
@@ -21,17 +21,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.1.2</kotlin.version>
+        <kotlin.version>1.1.3-2</kotlin.version>
         <junit.version>4.12</junit.version>
         <package.version>0.8-SNAPSHOT</package.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>kotlineap</id>
-            <url>http://dl.bintray.com/kotlin/kotlin-eap-1.2</url>
-        </repository>
-    </repositories>
 
     <dependencies>
         <dependency>
@@ -39,11 +34,7 @@
             <artifactId>kotlinx-coroutines-core</artifactId>
             <version>0.16</version>
         </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jre8</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit</artifactId>
@@ -56,17 +47,9 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test</artifactId>
-            <version>${kotlin.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
-        <sourceDirectory>src/main/kotlin</sourceDirectory>
-        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
 
         <plugins>
             <plugin>
@@ -90,7 +73,9 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <experimentalCoroutines>enable</experimentalCoroutines>
+                    <args>
+                        <arg>-Xcoroutines=enable</arg>
+                    </args>
                     <jvmTarget>1.8</jvmTarget>
                 </configuration>
             </plugin>
