--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,25 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.1.3-2</kotlin.version>
+        <kotlin.version>1.1.4-eap-33</kotlin.version>
         <junit.version>4.12</junit.version>
         <package.version>0.8-SNAPSHOT</package.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <repositories>
+        <repository>
+            <id>kotlin114eap33</id>
+            <url>https://dl.bintray.com/kotlin/kotlin-dev</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>kotlin114eap33</id>
+            <url>https://dl.bintray.com/kotlin/kotlin-dev</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <dependencies>
         <dependency>
