--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ subprojects {
     dependencies {
         compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlin_version
         compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: kotlin_version
+        compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.1.1'
+        compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-jdk8', version: '1.1.1'
+        
 
 
         testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: kotlin_version
