--- a/proto-mailbox/build.gradle
+++ b/proto-mailbox/build.gradle
@@ -5,4 +5,5 @@ artifact {
 dependencies {
     compile group: 'org.jctools', name: 'jctools-core', version:'2.1.1'
     compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.0'
 }
